--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -1,9 +1,9 @@
 series:
   title: Prague Artificial Intelligence & Deep Learning
   meetupcom:
-    url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/
-    meta_description: We’re excited to bring you the latest happenings in AI, Machine Learning, Deep Learning, Data Science and Big Data.Who are we? We’re H2O.ai ( https://www.h2o.ai/ ), creators of the world’s leading ope
-    og_title: Prague Artificial Intelligence & Deep Learning (Prague, Czech Republic)
+    url: https://www.meetup.com/login/
+    meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+    og_title: Login to Meetup | Meetup
     image: https://secure.meetupstatic.com/photos/event/1/6/c/e/600_485045838.jpeg
   events:
   - meetupcom:
