--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -304,3 +304,30 @@ series:
         url: https://www.meetup.com/naswp-cz/events/285149611/
         dtstart: 2022-04-27 19:00:00+02:00
         dtend: 2022-04-27 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 25, 7:00 PM  CEST: Tradiční sraz místní WordPressové komunity - poslední středa v měsíci. Tentokrát bez přednášky, protože jsme se dlouho neviděli naživo.
+
+
+        Sejdeme se na **Hradčanské v restau'
+      og_title: 'WordPress pivo Praha #33 - naživo!, Wed, May 25, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/naswp-cz/events/285883947/
+      ical:
+        summary: 'WordPress pivo Praha #33 - naživo!'
+        description: 'NášWP WordPress komunita
+
+          Wednesday, May 25 at 7:00 PM
+
+
+          Tradiční sraz místní WordPressové komunity - poslední středa v měsíci. Tentokrát bez přednášky, protože jsme se dlouho neviděli naživo.  Sejdeme se na...
+
+
+          https://www.meetup.com/naswp-cz/events/285883947/'
+        location: Pilsner restaurant U Viléma (Československé armády 276, Praha 6-Bubeneč, Czech Republic 160 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285883947@meetup.com
+        url: https://www.meetup.com/naswp-cz/events/285883947/
+        dtstart: 2022-05-25 19:00:00+02:00
+        dtend: 2022-05-25 22:00:00+02:00
