--- a/data/sources/webexpo.yaml
+++ b/data/sources/webexpo.yaml
@@ -1066,3 +1066,99 @@ series:
         url: https://www.meetup.com/WebExpo/events/232103291/
         dtstart: 2016-09-23 08:00:00+02:00
         dtend: 2016-09-24 23:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Sep 21, 10:00 AM  CEST: WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers, and marketers.
+
+
+        We''re'
+      og_title: WebExpo 2021, Tue, Sep 21, 2021, 10:00 AM   | Meetup
+      url: https://www.meetup.com/webexpo/events/267898993/
+      ical:
+        summary: WebExpo 2021
+        description: 'WebExpo
+
+          Tuesday, September 21 at 10:00 AM
+
+
+          WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers,...
+
+
+          https://www.meetup.com/WebExpo/events/267898993/'
+        location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_267898993@meetup.com
+        url: https://www.meetup.com/WebExpo/events/267898993/
+        dtstart: 2021-09-21 10:00:00+02:00
+        dtend: 2021-09-23 18:00:00+02:00
+  - meetupcom:
+      meta_description: 'Fri, Sep 20, 9:45 AM  CEST: We are the web event of the year! The best conference for devs, UX professionals, designers, and marketers to meet up and share their experiences. We''re a rich community of'
+      og_title: WebExpo 2019, Fri, Sep 20, 2019, 9:45 AM   | Meetup
+      url: https://www.meetup.com/webexpo/events/263721184/
+      ical:
+        summary: WebExpo 2019
+        description: 'WebExpo
+
+          Friday, September 20 at 9:45 AM
+
+
+          We are the web event of the year! The best conference for devs, UX professionals, designers, and marketers to meet up and share their experiences. We''...
+
+
+          https://www.meetup.com/WebExpo/events/263721184/'
+        location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_263721184@meetup.com
+        url: https://www.meetup.com/WebExpo/events/263721184/
+        dtstart: 2019-09-20 09:45:00+02:00
+        dtend: 2019-09-22 18:00:00+02:00
+  - meetupcom:
+      meta_description: 'Fri, Sep 23, 9:00 PM  CEST: 2 days all about the web: 70 speakers, 2000 people from the industry and meetings IRL'
+      og_title: Get professional help before your obsessions take over!, Fri, Sep 23, 2016, 9:00 PM   | Meetup
+      url: https://www.meetup.com/webexpo/events/232703682/
+      ical:
+        summary: Get professional help before your obsessions take over!
+        description: 'WebExpo
+
+          Friday, September 23 at 9:00 PM
+
+
+          2 days all about the web: 70 speakers, 2000 people from the industry and meetings IRL
+
+
+          https://www.meetup.com/WebExpo/events/232703682/'
+        location: Lucerna (Vodičkova 36, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_232703682@meetup.com
+        url: https://www.meetup.com/WebExpo/events/232703682/
+        dtstart: 2016-09-23 21:00:00+02:00
+        dtend: 2016-09-24 23:00:00+02:00
+  - meetupcom:
+      meta_description: 'Fri, Sep 23, 8:00 AM  CEST: '
+      og_title: WebExpo 2016, Fri, Sep 23, 2016, 8:00 AM   | Meetup
+      url: https://www.meetup.com/webexpo/events/232103291/
+      ical:
+        summary: WebExpo 2016
+        description: 'WebExpo
+
+          Friday, September 23 at 8:00 AM
+
+
+          https://www.meetup.com/WebExpo/events/232103291/'
+        location: Lucerna (Vodičkova 36, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_232103291@meetup.com
+        url: https://www.meetup.com/WebExpo/events/232103291/
+        dtstart: 2016-09-23 08:00:00+02:00
+        dtend: 2016-09-24 23:00:00+02:00
