--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -1361,3 +1361,120 @@ series:
         url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/284675566/
         dtstart: 2022-04-20 19:00:00+02:00
         dtend: 2022-04-20 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 18, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, May 18, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydchbxb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, May 18 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285521261/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydchbxb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285521261/
+        dtstart: 2022-05-18 19:00:00+02:00
+        dtend: 2022-05-18 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jun 15, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Jun 15, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcjbtb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, June 15 at 7:00 PM
+
+          \nWe will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285151921/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcjbtb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285151921/
+        dtstart: 2022-06-15 19:00:00+02:00
+        dtend: 2022-06-15 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jul 20, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Jul 20, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydckbbc/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, July 20 at 7:00 PM
+
+          \nWe will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydckbbc/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydckbbc@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydckbbc/
+        dtstart: 2022-07-20 19:00:00+02:00
+        dtend: 2022-07-20 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Aug 17, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Aug 17, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydclbwb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, August 17 at 7:00 PM\n
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydclbwb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydclbwb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydclbwb/
+        dtstart: 2022-08-17 19:00:00+02:00
+        dtend: 2022-08-17 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Apr 20, 7:00 PM  CEST: This Pyvo will bring us to the amazing world of 3D printing and how it channels Python on the firmware level. Then we will move on to the super important topic for all of u'
+      og_title: 'Pyvo Prague #131 - coding 3D printer FW & tech junior community, Wed, Apr 20, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcgbbc/
+      ical:
+        summary: 'Pyvo Prague #131 - coding 3D printer FW & tech junior community'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, April 20 at 7:00 PM
+
+
+          This Pyvo will bring us to the amazing world of 3D printing and how it channels Python on the firmware level. Then we will move on to the super import...
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/284675566/'
+        location: Kavárna Liberál (Heřmanova 6, Praha 7-Holešovice, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcgbbc@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/284675566/
+        dtstart: 2022-04-20 19:00:00+02:00
+        dtend: 2022-04-20 23:59:00+02:00
