data: cron update

--- a/data/sources/dscc-cze.yaml
+++ b/data/sources/dscc-cze.yaml
@@ -1,7 +1,7 @@
 series:
   meetupcom:
     url: https://www.meetup.com/dscc_cze/
-    meta_description: Welcome to Design Systems Community Chapter (DSCC) CzechiaDesign Systems Community helps bring people together to share ways of working, successes, and other learnings to encourage best practices in b
+    meta_description: Welcome to Design Systems Community Chapter (DSCC) Czechia! 👋We help to bring people together to share ways of working, successes, and other learnings to encourage best practices in building, scaling
     og_title: Design Systems Community Chapter Czechia (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/2/6/2/6/600_490269766.jpeg
   events:
