--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -3835,3 +3835,119 @@ series:
         url: https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
         dtstart: 2021-09-08 19:00:00+02:00
         dtend: 2021-09-08 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Apr 6, 7:00 PM  CEST: Hello doers,
+
+
+        The first hybrid and the second this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
+
+        The structure of'
+      og_title: Prague DevOps meetup hybrid (April 2022), Wed, Apr 6, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/prague-devops-meetup/events/283816829/
+      ical:
+        summary: Prague DevOps meetup hybrid (April 2022)
+        description: 'Prague DevOps Meetup
+
+          Wednesday, April 6 at 7:00 PM
+
+
+          Hello doers, The first hybrid and the second this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewh...
+
+
+          https://www.meetup.com/Prague-DevOps-Meetup/events/283816829/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283816829@meetup.com
+        url: https://www.meetup.com/Prague-DevOps-Meetup/events/283816829/
+        dtstart: 2022-04-06 19:00:00+02:00
+        dtend: 2022-04-06 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Feb 2, 7:00 PM  CET: Hello doers,
+
+
+        The fifth online and the first this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
+
+        The structure of '
+      og_title: Prague DevOps meetup online (February 2022), Wed, Feb 2, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/prague-devops-meetup/events/283152511/
+      ical:
+        summary: Prague DevOps meetup online (February 2022)
+        description: 'Prague DevOps Meetup
+
+          Wednesday, February 2 at 7:00 PM
+
+
+          Hello doers, The fifth online and the first this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhe...
+
+
+          https://www.meetup.com/Prague-DevOps-Meetup/events/283152511/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283152511@meetup.com
+        url: https://www.meetup.com/Prague-DevOps-Meetup/events/283152511/
+        dtstart: 2022-02-02 19:00:00+01:00
+        dtend: 2022-02-02 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Nov 3, 6:00 PM  CET: Hello doers,
+
+
+        The fourth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
+
+        The structure of the session will be one'
+      og_title: Prague DevOps meetup online (November), Wed, Nov 3, 2021, 6:00 PM   | Meetup
+      url: https://www.meetup.com/prague-devops-meetup/events/281198432/
+      ical:
+        summary: Prague DevOps meetup online (November)
+        description: 'Prague DevOps Meetup
+
+          Wednesday, November 3 at 6:00 PM
+
+
+          Hello doers, The fourth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the...
+
+
+          https://www.meetup.com/Prague-DevOps-Meetup/events/281198432/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281198432@meetup.com
+        url: https://www.meetup.com/Prague-DevOps-Meetup/events/281198432/
+        dtstart: 2021-11-03 18:00:00+01:00
+        dtend: 2021-11-03 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Sep 8, 7:00 PM  CEST: Hello doers,
+
+
+        The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
+
+        The structure of the session will be one '
+      og_title: Prague DevOps meetup online (September), Wed, Sep 8, 2021, 7:00 PM   | Meetup
+      url: https://www.meetup.com/prague-devops-meetup/events/280234441/
+      ical:
+        summary: Prague DevOps meetup online (September)
+        description: 'Prague DevOps Meetup
+
+          Wednesday, September 8 at 7:00 PM
+
+
+          Hello doers, The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the ...
+
+
+          https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280234441@meetup.com
+        url: https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
+        dtstart: 2021-09-08 19:00:00+02:00
+        dtend: 2021-09-08 21:00:00+02:00
