--- a/data/sources/gcdc-prague.yaml
+++ b/data/sources/gcdc-prague.yaml
@@ -4225,3 +4225,127 @@ series:
         url: https://www.meetup.com/GCDC-Prague/events/272110257/
         dtstart: 2020-10-07 18:30:00+02:00
         dtend: 2020-10-07 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 19, 6:30 PM  CEST: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o tom jak s GCP začít]
+
+
+        Proč?
+
+        ======
+
+        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme př'
+      og_title: Cloud Talks vol.7 {Jak začít s GCP}, Wed, May 19, 2021, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gcdc-prague/events/276944440/
+      ical:
+        summary: Cloud Talks vol.7 {Jak začít s GCP}
+        description: 'Google Cloud Developer Community Prague
+
+          Wednesday, May 19 at 6:30 PM
+
+
+          Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkýc...
+
+
+          https://www.meetup.com/GCDC-Prague/events/276944440/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_276944440@meetup.com
+        url: https://www.meetup.com/GCDC-Prague/events/276944440/
+        dtstart: 2021-05-19 18:30:00+02:00
+        dtend: 2021-05-19 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Mar 3, 6:30 PM  CET: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o K8s]
+
+
+        Proč?
+
+        ======
+
+        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setk'
+      og_title: Cloud Talks vol.6 {Kubernetes}, Wed, Mar 3, 2021, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gcdc-prague/events/274666372/
+      ical:
+        summary: Cloud Talks vol.6 {Kubernetes}
+        description: 'Google Cloud Developer Community Prague
+
+          Wednesday, March 3 at 6:30 PM
+
+
+          Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkýc...
+
+
+          https://www.meetup.com/GCDC-Prague/events/274666372/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_274666372@meetup.com
+        url: https://www.meetup.com/GCDC-Prague/events/274666372/
+        dtstart: 2021-03-03 18:30:00+01:00
+        dtend: 2021-03-03 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Nov 11, 6:30 PM  CET: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o Serverless Computing]
+
+
+        Proč?
+
+        ======
+
+        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme p'
+      og_title: Cloud Talks vol.5 {Serverless Computing}, Wed, Nov 11, 2020, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gcdc-prague/events/273622225/
+      ical:
+        summary: Cloud Talks vol.5 {Serverless Computing}
+        description: 'Google Cloud Developer Community Prague
+
+          Wednesday, November 11 at 6:30 PM
+
+
+          Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkýc...
+
+
+          https://www.meetup.com/GCDC-Prague/events/273622225/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_273622225@meetup.com
+        url: https://www.meetup.com/GCDC-Prague/events/273622225/
+        dtstart: 2020-11-11 18:30:00+01:00
+        dtend: 2020-11-11 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Oct 7, 6:30 PM  CEST: [Pojďme se potkat online a nasdílet zkušenosti o práci s daty]
+
+
+        Proč?
+
+        ======
+
+        Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání na'
+      og_title: Cloud Talks vol.4 {Data}, Wed, Oct 7, 2020, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gcdc-prague/events/272110257/
+      ical:
+        summary: Cloud Talks vol.4 {Data}
+        description: 'Google Cloud Developer Community Prague
+
+          Wednesday, October 7 at 6:30 PM
+
+
+          Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tématy, které Vás zajímají. Pomocí krátkýc...
+
+
+          https://www.meetup.com/GCDC-Prague/events/272110257/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_272110257@meetup.com
+        url: https://www.meetup.com/GCDC-Prague/events/272110257/
+        dtstart: 2020-10-07 18:30:00+02:00
+        dtend: 2020-10-07 20:00:00+02:00
