--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -4512,3 +4512,117 @@ series:
         url: https://www.meetup.com/GDG-Ostrava/events/278023608/
         dtstart: 2021-06-02 18:00:00+02:00
         dtend: 2021-06-02 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 11, 4:00 PM  CEST: THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW
+
+
+        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-io-2022-extended-ostrava-meetup/
+
+
+        I/O'
+      og_title: I/O 2022 Extended Ostrava Meetup, Wed, May 11, 2022, 4:00 PM   | Meetup
+      url: https://www.meetup.com/gdg-ostrava/events/284926288/
+      ical:
+        summary: I/O 2022 Extended Ostrava Meetup
+        description: 'GDG Ostrava
+
+          Wednesday, May 11 at 4:00 PM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-io-2022-ext...
+
+
+          https://www.meetup.com/GDG-Ostrava/events/284926288/'
+        location: Online event
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_284926288@meetup.com
+        url: https://www.meetup.com/GDG-Ostrava/events/284926288/
+        dtstart: 2022-05-11 16:00:00+02:00
+        dtend: 2022-05-11 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Mar 2, 10:00 AM  CET: THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW
+
+
+        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-mezinarodni-tyden-zen-international-w'
+      og_title: Mezinárodní Týden žen (international women's week), Wed, Mar 2, 2022, 10:00 AM   | Meetup
+      url: https://www.meetup.com/gdg-ostrava/events/283915704/
+      ical:
+        summary: Mezinárodní Týden žen (international women's week)
+        description: 'GDG Ostrava
+
+          Wednesday, March 2 at 10:00 AM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-mezinarodni...
+
+
+          https://www.meetup.com/GDG-Ostrava/events/283915704/'
+        location: null
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_283915704@meetup.com
+        url: https://www.meetup.com/GDG-Ostrava/events/283915704/
+        dtstart: 2022-03-02 10:00:00+01:00
+        dtend: 2022-03-08 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Fri, Nov 26, 9:00 AM  CET: PLEASE RSVP USING THE LINK BELOW
+
+
+        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-devfestcz-2021-powered-by-techmeetup/
+
+
+        DevFest.cz je každoročně pořád'
+      og_title: DevFest.cz 2021 powered by TechMeetup, Fri, Nov 26, 2021, 9:00 AM   | Meetup
+      url: https://www.meetup.com/gdg-ostrava/events/281546792/
+      ical:
+        summary: DevFest.cz 2021 powered by TechMeetup
+        description: 'GDG Ostrava
+
+          Friday, November 26 at 9:00 AM
+
+
+          PLEASE RSVP USING THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-devfestcz-2021-powered-by-techmeetup/     &...
+
+
+          https://www.meetup.com/GDG-Ostrava/events/281546792/'
+        location: null
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_281546792@meetup.com
+        url: https://www.meetup.com/GDG-Ostrava/events/281546792/
+        dtstart: 2021-11-26 09:00:00+01:00
+        dtend: 2021-11-26 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Jun 2, 6:00 PM  CEST: THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW
+
+
+        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-cybersecurity-with-zdenek-klus-ii-cze'
+      og_title: Cybersecurity with Zdenek Klus II [Czech], Wed, Jun 2, 2021, 6:00 PM   | Meetup
+      url: https://www.meetup.com/gdg-ostrava/events/278023608/
+      ical:
+        summary: Cybersecurity with Zdenek Klus II [Czech]
+        description: 'GDG Ostrava
+
+          Wednesday, June 2 at 6:00 PM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-cybersecuri...
+
+
+          https://www.meetup.com/GDG-Ostrava/events/278023608/'
+        location: null
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_278023608@meetup.com
+        url: https://www.meetup.com/GDG-Ostrava/events/278023608/
+        dtstart: 2021-06-02 18:00:00+02:00
+        dtend: 2021-06-02 21:00:00+02:00
