--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -1224,3 +1224,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/285588258/
         dtstart: 2022-05-24 18:30:00+02:00
         dtend: 2022-05-24 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jun 7, 6:30 PM  CEST: Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on", handle a much bigger user load, and'
+      og_title: Building a Distributed Database With the Raft Replication Algorithm, Tue, Jun 7, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/286110500/
+      ical:
+        summary: Building a Distributed Database With the Raft Replication Algorithm
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, June 7 at 6:30 PM
+
+
+          Applications running on production have much higher requirements. Not only do they need to be correct, they also need to be "always-on", handle a much...
+
+
+          https://www.meetup.com/typedb-prague/events/286110500/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286110500@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286110500/
+        dtstart: 2022-06-07 18:30:00+02:00
+        dtend: 2022-06-07 19:30:00+02:00
