data: cron update

--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -318,11 +318,11 @@ series:
           Wednesday, May 25 at 7:00 PM
 
 
-          Tradiční sraz místní WordPressové komunity - poslední středa v měsíci. Tentokrát bez přednášky, protože jsme se dlouho neviděli naživo.  Sejdeme se na...
+          Tradiční sraz místní WordPressové komunity - poslední středa v měsíci. Tentokrát bez přednášky, protože jsme se dlouho neviděli naživo. Sejdeme se na ...
 
 
           https://www.meetup.com/naswp-cz/events/285883947/'
-        location: Pilsner restaurant U Viléma (Československé armády 276, Praha 6-Bubeneč, Czech Republic 160 00)
+        location: Restaurace U Veverky (Eliášova 324, Praha 6-Bubeneč, Czech Republic 160 00)
         geo:
           lat: 50.08
           lon: 14.43
