--- a/data/sources/cshug.yaml
+++ b/data/sources/cshug.yaml
@@ -4234,3 +4234,99 @@ series:
         url: https://www.meetup.com/CS-HUG/events/264787795/
         dtstart: 2019-09-26 18:00:00+02:00
         dtend: 2019-09-26 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jan 30, 6:00 PM  CET: You might have heard news about the declining popularity of Hadoop and the Cloudera-Hortonworks merger. Taglines such as "Hadoop is dead" are growing in popularity. In this'
+      og_title: The End of Hadoop? Big Data & Its Future, Thu, Jan 30, 2020, 6:00 PM   | Meetup
+      url: https://www.meetup.com/cs-hug/events/268060656/
+      ical:
+        summary: The End of Hadoop? Big Data & Its Future
+        description: 'HUG: Big Data Meetup Prague
+
+          Thursday, January 30 at 6:00 PM
+
+
+          You might have heard news about the declining popularity of Hadoop and the Cloudera-Hortonworks merger. Taglines such as "Hadoop is dead" are growing ...
+
+
+          https://www.meetup.com/CS-HUG/events/268060656/'
+        location: Ataccama office (Futurama Business Park, Sokolovská 685/136f, 186 00, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_268060656@meetup.com
+        url: https://www.meetup.com/CS-HUG/events/268060656/
+        dtstart: 2020-01-30 18:00:00+01:00
+        dtend: 2020-01-30 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Nov 14, 6:00 PM  CET: Apache Spark and Delta Lake (delta.io) are both open-source projects that help with big-data production workloads. While Apache Spark is de-facto the industry standard for '
+      og_title: Making Apache Spark™ Better with Delta Lake, Thu, Nov 14, 2019, 6:00 PM   | Meetup
+      url: https://www.meetup.com/cs-hug/events/266200104/
+      ical:
+        summary: Making Apache Spark™ Better with Delta Lake
+        description: 'HUG: Big Data Meetup Prague
+
+          Thursday, November 14 at 6:00 PM
+
+
+          Apache Spark and Delta Lake (delta.io) are both open-source projects that help with big-data production workloads. While Apache Spark is de-facto the ...
+
+
+          https://www.meetup.com/CS-HUG/events/266200104/'
+        location: Ataccama office (Futurama Business Park, Sokolovská 685/136f, 186 00, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_266200104@meetup.com
+        url: https://www.meetup.com/CS-HUG/events/266200104/
+        dtstart: 2019-11-14 18:00:00+01:00
+        dtend: 2019-11-14 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Oct 31, 6:00 PM  CET: Jumpshot is an online analytics company that delivers insights on user behaviors everywhere online. Jumpshot uses machine learning and big data processing in Spark to creat'
+      og_title: Crunching Petabytes with Jumpshot, Thu, Oct 31, 2019, 6:00 PM   | Meetup
+      url: https://www.meetup.com/cs-hug/events/265835330/
+      ical:
+        summary: Crunching Petabytes with Jumpshot
+        description: 'HUG: Big Data Meetup Prague
+
+          Thursday, October 31 at 6:00 PM
+
+
+          Jumpshot is an online analytics company that delivers insights on user behaviors everywhere online. Jumpshot uses machine learning and big data proces...
+
+
+          https://www.meetup.com/CS-HUG/events/265835330/'
+        location: Ataccama office (Futurama Business Park, Sokolovská 685/136f, 186 00, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_265835330@meetup.com
+        url: https://www.meetup.com/CS-HUG/events/265835330/
+        dtstart: 2019-10-31 18:00:00+01:00
+        dtend: 2019-10-31 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Sep 26, 6:00 PM  CEST: Spark pipelines represent a powerful concept to support productionizing machine learning workflows. Their API allows to combine data processing with machine learning algori'
+      og_title: 'Fresh Season - Fresh Water: Productionizing H2O Models Using Apache Spark, Thu, Sep 26, 2019, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/cs-hug/events/264787795/
+      ical:
+        summary: 'Fresh Season - Fresh Water: Productionizing H2O Models Using Apache Spark'
+        description: 'HUG: Big Data Meetup Prague
+
+          Thursday, September 26 at 6:00 PM
+
+
+          Spark pipelines represent a powerful concept to support productionizing machine learning workflows. Their API allows to combine data processing with m...
+
+
+          https://www.meetup.com/CS-HUG/events/264787795/'
+        location: Ataccama office (Futurama Business Park, Sokolovská 685/136f, 186 00, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_264787795@meetup.com
+        url: https://www.meetup.com/CS-HUG/events/264787795/
+        dtstart: 2019-09-26 18:00:00+02:00
+        dtend: 2019-09-26 20:00:00+02:00
