data: cron update

--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -5288,3 +5288,123 @@ series:
         url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285521261/
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jun 15, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Jun 15, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcjbtb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, June 15 at 7:00 PM
+
+          \nWe will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285151921/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcjbtb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285151921/
+        dtstart: 2022-06-15 19:00:00+02:00
+        dtend: 2022-06-15 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jul 20, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Jul 20, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydckbbc/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, July 20 at 7:00 PM
+
+          \nWe will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydckbbc/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydckbbc@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydckbbc/
+        dtstart: 2022-07-20 19:00:00+02:00
+        dtend: 2022-07-20 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Aug 17, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Aug 17, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydclbwb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, August 17 at 7:00 PM\n
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydclbwb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydclbwb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydclbwb/
+        dtstart: 2022-08-17 19:00:00+02:00
+        dtend: 2022-08-17 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Sep 21, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Sep 21, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcmbcc/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, September 21 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcmbcc/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcmbcc@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcmbcc/
+        dtstart: 2022-09-21 19:00:00+02:00
+        dtend: 2022-09-21 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 18, 7:00 PM  CEST: **Potkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava.**
+
+
+        **We meet at the Holešovická šachta. You can look forward to one presentation, l'
+      og_title: Pyvo Prague 132, Wed, May 18, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydchbxb/
+      ical:
+        summary: Pyvo Prague 132
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, May 18 at 7:00 PM
+
+
+          **Potkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava.** **We meet at the Holešovická šachta. You can look forward t...
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285521261/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydchbxb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/285521261/
+        dtstart: 2022-05-18 19:00:00+02:00
+        dtend: 2022-05-18 23:59:00+02:00
